[build-system]
requires = ["hatchling", "requests>=2.31.0"]
build-backend = "hatchling.build"

[project]
name = "python-rebase"
version = "0.2.1"
authors = [
  { name="Tiago Trotta", email="mrtrotta2010@gmail.com" },
]
description = "Python implementation of the ReBase API"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",

]
keywords = ["gesture tracking", "movement tracking", "databases", "database", "medical"]
dependencies = ["requests"]

[project.urls]
"Repository" = "https://github.com/MrTrotta2010/python-rebase"
"Changelog" = "https://github.com/MrTrotta2010/python-rebase/blob/main/CHANGELOG.md"
